# trading-data-warehouse

./: .env.example  .gitignore  Makefile  README.md  config.yaml.example  docker-compose.yaml  launch.json.example  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint-and-test.yaml  release.yaml
src/tdw/: main.py
src/tdw/config/: auth.py  configure.py  spark.py
src/tdw/ingest/: ingestor.py  sources.py
src/tdw/ingest/datasets/rapid_yahoo/: config.yaml
src/tdw/ingest/datasets/rapid_yahoo/schema/: history_15m.yaml  history_1d.yaml  history_1m.yaml  history_1mo.yaml  history_1wk.yaml  history_30m.yaml  history_3mo.yaml  history_5m.yaml  quotes.yaml  tickers.yaml
src/tdw/utils/: helpers.py
tests/: test_config_loader.py  test_spark.py
